Sources/Celestial/Compiler/CelestialParser.py
# Generated from .\Compiler\CelestialParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class CelestialParser ( Parser ):

    grammarFileName = "CelestialParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'address'", "'bool'", "'enum'", "'event'", 
                     "'eventlog'", "'uint'", "'uint8'", "'inst_map'", "'int'", 
                     "'string'", "'contract'", "'mapping'", "'bytes'", "'bytes20'", 
                     "'bytes32'", "'add'", "'assert'", "'balance'", "'block.coinbase'", 
                     "'block.difficulty'", "'block.gaslimit'", "'block.number'", 
                     "'block.timestamp'", "'call'", "'constructor'", "'contains'", 
                     "'credit'", "'debit'", "'default'", "'delete'", "'else'", 
                     "'emit'", "'eTransfer'", "'exists'", "'for'", "'forall'", 
                     "'function'", "'if'", "'in'", "'int_min'", "'int_max'", 
                     "'ite'", "'invariant'", "'keys'", "'lemma'", "'length'", 
                     "'log'", "'modifies'", "'modifies_addresses'", "'new'", 
                     "'payable'", "'pop'", "'post'", "'pre'", "'print'", 
                     "'private'", "'public'", "'push'", "'return'", "'returns'", 
                     "'revert'", "'safe_add'", "'safe_div'", "'safe_mod'", 
                     "'safe_mul'", "'safe_sub'", "'send'", "'sender'", "'spec'", 
                     "'struct'", "'this'", "'tx_reverts'", "'tx.gasprice'", 
                     "'tx.origin'", "'uint_max'", "'value'", "<INVALID>", 
                     "<INVALID>", "'null'", "<INVALID>", "'!'", "'&&'", 
                     "'||'", "'=>'", "'==>'", "'<==>'", "'=='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "'->'", "'='", "'+='", 
                     "'-='", "'+'", "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "';'", "','", "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "ADDR", "BOOL", "ENUM", "EVENT", "EVENTLOG", 
                      "UINT", "UINT8", "INSTMAP", "INT", "STRING", "CONTRACT", 
                      "MAP", "BYTES", "BYTES20", "BYTES32", "ADD", "ASSERT", 
                      "BALANCE", "BCOINBASE", "BDIFF", "BGASLIMIT", "BNUMBER", 
                      "BTIMESTAMP", "CALL", "CONSTR", "CONTAINS", "CREDIT", 
                      "DEBIT", "DEFAULT", "DELETE", "ELSE", "EMIT", "ETRANSFER", 
                      "EXISTS", "FOR", "FORALL", "FUNCTION", "IF", "IN", 
                      "INT_MIN", "INT_MAX", "ITE", "INVARIANT", "KEYS", 
                      "LEMMA", "LENGTH", "LOG", "MODIFIES", "MODIFIESA", 
                      "NEW", "PAYABLE", "POP", "POST", "PRE", "PRINT", "PRIVATE", 
                      "PUBLIC", "PUSH", "RETURN", "RETURNS", "REVERT", "SAFEADD", 
                      "SAFEDIV", "SAFEMOD", "SAFEMUL", "SAFESUB", "SEND", 
                      "SENDER", "SPEC", "STRUCT", "THIS", "TXREVERTS", "TXGASPRICE", 
                      "TXORIGIN", "UINT_MAX", "VALUE", "BoolLiteral", "IntLiteral", 
                      "NullLiteral", "StringLiteral", "LNOT", "LAND", "LOR", 
                      "MAPUPD", "IMPL", "BIMPL", "EQ", "NE", "LE", "GE", 
                      "LT", "GT", "RARROW", "ASSIGN", "INSERT", "REMOVE", 
                      "PLUS", "SUB", "MUL", "DIV", "MOD", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "LPAREN", "RPAREN", "SEMI", "COMMA", 
                      "DOT", "COLON", "Iden", "Whitespace", "BlockComment", 
                      "LineComment" ]

    RULE_program = 0
    RULE_iden = 1
    RULE_datatype = 2
    RULE_idenTypeList = 3
    RULE_idenType = 4
    RULE_contractDecl = 5
    RULE_contractBody = 6
    RULE_contractContents = 7
    RULE_enumDecl = 8
    RULE_structDecl = 9
    RULE_funDecl = 10
    RULE_funParamList = 11
    RULE_funParam = 12
    RULE_functionBody = 13
    RULE_invariantDecl = 14
    RULE_invariantBody = 15
    RULE_eventDecl = 16
    RULE_constructorDecl = 17
    RULE_spec = 18
    RULE_methodDecl = 19
    RULE_methodParamList = 20
    RULE_methodParam = 21
    RULE_methodBody = 22
    RULE_returnStatement = 23
    RULE_varDecl = 24
    RULE_loopVarDecl = 25
    RULE_statement = 26
    RULE_elseStatement = 27
    RULE_lvalue = 28
    RULE_logcheck = 29
    RULE_expr = 30
    RULE_primitive = 31
    RULE_unnamedTupleBody = 32
    RULE_namedTupleBody = 33
    RULE_rvalueList = 34
    RULE_rvalue = 35

    ruleNames =  [ "program", "iden", "datatype", "idenTypeList", "idenType", 
                   "contractDecl", "contractBody", "contractContents", "enumDecl", 
                   "structDecl", "funDecl", "funParamList", "funParam", 
                   "functionBody", "invariantDecl", "invariantBody", "eventDecl", 
                   "constructorDecl", "spec", "methodDecl", "methodParamList", 
                   "methodParam", "methodBody", "returnStatement", "varDecl", 
                   "loopVarDecl", "statement", "elseStatement", "lvalue", 
                   "logcheck", "expr", "primitive", "unnamedTupleBody", 
                   "namedTupleBody", "rvalueList", "rvalue" ]

    EOF = Token.EOF
    ADDR=1
    BOOL=2
    ENUM=3
    EVENT=4
    EVENTLOG=5
    UINT=6
    UINT8=7
    INSTMAP=8
    INT=9
    STRING=10
    CONTRACT=11
    MAP=12
    BYTES=13
    BYTES20=14
    BYTES32=15
    ADD=16
    ASSERT=17
    BALANCE=18
    BCOINBASE=19
    BDIFF=20
    BGASLIMIT=21
    BNUMBER=22
    BTIMESTAMP=23
    CALL=24
    CONSTR=25
    CONTAINS=26
    CREDIT=27
    DEBIT=28
    DEFAULT=29
    DELETE=30
    ELSE=31
    EMIT=32
    ETRANSFER=33
    EXISTS=34
    FOR=35
    FORALL=36
    FUNCTION=37
    IF=38
    IN=39
    INT_MIN=40
    INT_MAX=41
    ITE=42
    INVARIANT=43
    KEYS=44
    LEMMA=45
    LENGTH=46
    LOG=47
    MODIFIES=48
    MODIFIESA=49
    NEW=50
    PAYABLE=51
    POP=52
    POST=53
    PRE=54
    PRINT=55
    PRIVATE=56
    PUBLIC=57
    PUSH=58
    RETURN=59
    RETURNS=60
    REVERT=61
    SAFEADD=62
    SAFEDIV=63
    SAFEMOD=64
    SAFEMUL=65
    SAFESUB=66
    SEND=67
    SENDER=68
    SPEC=69
    STRUCT=70
    THIS=71
    TXREVERTS=72
    TXGASPRICE=73
    TXORIGIN=74
    UINT_MAX=75
    VALUE=76
    BoolLiteral=77
    IntLiteral=78
    NullLiteral=79
    StringLiteral=80
    LNOT=81
    LAND=82
    LOR=83
    MAPUPD=84
    IMPL=85
    BIMPL=86
    EQ=87
    NE=88
    LE=89
    GE=90
    LT=91
    GT=92
    RARROW=93
    ASSIGN=94
    INSERT=95
    REMOVE=96
    PLUS=97
    SUB=98
    MUL=99
    DIV=100
    MOD=101
    LBRACE=102
    RBRACE=103
    LBRACK=104
    RBRACK=105
    LPAREN=106
    RPAREN=107
    SEMI=108
    COMMA=109
    DOT=110
    COLON=111
    Iden=112
    Whitespace=113
    BlockComment=114
    LineComment=115

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CelestialParser.EOF, 0)

        def contractDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.ContractDeclContext)
            else:
                return self.getTypedRuleContext(CelestialParser.ContractDeclContext,i)


        def getRuleIndex(self):
            return CelestialParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CelestialParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CelestialParser.CONTRACT:
                self.state = 72
                self.contractDecl()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(CelestialParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Iden(self):
            return self.getToken(CelestialParser.Iden, 0)

        def getRuleIndex(self):
            return CelestialParser.RULE_iden

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIden" ):
                listener.enterIden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIden" ):
                listener.exitIden(self)




    def iden(self):

        localctx = CelestialParser.IdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_iden)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(CelestialParser.Iden)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatatypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.arrayType = None # DatatypeContext
            self.keyType = None # DatatypeContext
            self.valueType = None # DatatypeContext
            self.name = None # IdenContext

        def MAP(self):
            return self.getToken(CelestialParser.MAP, 0)

        def LPAREN(self):
            return self.getToken(CelestialParser.LPAREN, 0)

        def MAPUPD(self):
            return self.getToken(CelestialParser.MAPUPD, 0)

        def RPAREN(self):
            return self.getToken(CelestialParser.RPAREN, 0)

        def datatype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.DatatypeContext)
            else:
                return self.getTypedRuleContext(CelestialParser.DatatypeContext,i)


        def BOOL(self):
            return self.getToken(CelestialParser.BOOL, 0)

        def INT(self):
            return self.getToken(CelestialParser.INT, 0)

        def UINT(self):
            return self.getToken(CelestialParser.UINT, 0)

        def UINT8(self):
            return self.getToken(CelestialParser.UINT8, 0)

        def STRING(self):
            return self.getToken(CelestialParser.STRING, 0)

        def ADDR(self):
            return self.getToken(CelestialParser.ADDR, 0)

        def PAYABLE(self):
            return self.getToken(CelestialParser.PAYABLE, 0)

        def EVENTLOG(self):
            return self.getToken(CelestialParser.EVENTLOG, 0)

        def EVENT(self):
            return self.getToken(CelestialParser.EVENT, 0)

        def iden(self):
            return self.getTypedRuleContext(CelestialParser.IdenContext,0)


        def INSTMAP(self):
            return self.getToken(CelestialParser.INSTMAP, 0)

        def LT(self):
            return self.getToken(CelestialParser.LT, 0)

        def GT(self):
            return self.getToken(CelestialParser.GT, 0)

        def BYTES(self):
            return self.getToken(CelestialParser.BYTES, 0)

        def BYTES20(self):
            return self.getToken(CelestialParser.BYTES20, 0)

        def BYTES32(self):
            return self.getToken(CelestialParser.BYTES32, 0)

        def LBRACK(self):
            return self.getToken(CelestialParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(CelestialParser.RBRACK, 0)

        def getRuleIndex(self):
            return CelestialParser.RULE_datatype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatatype" ):
                listener.enterDatatype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatatype" ):
                listener.exitDatatype(self)



    def datatype(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CelestialParser.DatatypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_datatype, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CelestialParser.MAP]:
                self.state = 83
                self.match(CelestialParser.MAP)
                self.state = 84
                self.match(CelestialParser.LPAREN)
                self.state = 85
                localctx.keyType = self.datatype(0)
                self.state = 86
                self.match(CelestialParser.MAPUPD)
                self.state = 87
                localctx.valueType = self.datatype(0)
                self.state = 88
                self.match(CelestialParser.RPAREN)
                pass
            elif token in [CelestialParser.BOOL]:
                self.state = 90
                self.match(CelestialParser.BOOL)
                pass
            elif token in [CelestialParser.INT]:
                self.state = 91
                self.match(CelestialParser.INT)
                pass
            elif token in [CelestialParser.UINT]:
                self.state = 92
                self.match(CelestialParser.UINT)
                pass
            elif token in [CelestialParser.UINT8]:
                self.state = 93
                self.match(CelestialParser.UINT8)
                pass
            elif token in [CelestialParser.STRING]:
                self.state = 94
                self.match(CelestialParser.STRING)
                pass
            elif token in [CelestialParser.ADDR]:
                self.state = 95
                self.match(CelestialParser.ADDR)
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 96
                    self.match(CelestialParser.PAYABLE)


                pass
            elif token in [CelestialParser.EVENTLOG]:
                self.state = 99
                self.match(CelestialParser.EVENTLOG)
                pass
            elif token in [CelestialParser.EVENT]:
                self.state = 100
                self.match(CelestialParser.EVENT)
                pass
            elif token in [CelestialParser.Iden]:
                self.state = 101
                localctx.name = self.iden()
                pass
            elif token in [CelestialParser.INSTMAP]:
                self.state = 102
                self.match(CelestialParser.INSTMAP)
                self.state = 103
                self.match(CelestialParser.LT)
                self.state = 104
                self.iden()
                self.state = 105
                self.match(CelestialParser.GT)
                pass
            elif token in [CelestialParser.BYTES]:
                self.state = 107
                self.match(CelestialParser.BYTES)
                pass
            elif token in [CelestialParser.BYTES20]:
                self.state = 108
                self.match(CelestialParser.BYTES20)
                pass
            elif token in [CelestialParser.BYTES32]:
                self.state = 109
                self.match(CelestialParser.BYTES32)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CelestialParser.DatatypeContext(self, _parentctx, _parentState)
                    localctx.arrayType = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_datatype)
                    self.state = 112
                    if not self.precpred(self._ctx, 15):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                    self.state = 113
                    self.match(CelestialParser.LBRACK)
                    self.state = 114
                    self.match(CelestialParser.RBRACK) 
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class IdenTypeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idenType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.IdenTypeContext)
            else:
                return self.getTypedRuleContext(CelestialParser.IdenTypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CelestialParser.COMMA)
            else:
                return self.getToken(CelestialParser.COMMA, i)

        def getRuleIndex(self):
            return CelestialParser.RULE_idenTypeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdenTypeList" ):
                listener.enterIdenTypeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdenTypeList" ):
                listener.exitIdenTypeList(self)




    def idenTypeList(self):

        localctx = CelestialParser.IdenTypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_idenTypeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.idenType()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CelestialParser.COMMA:
                self.state = 121
                self.match(CelestialParser.COMMA)
                self.state = 122
                self.idenType()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdenTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # IdenContext

        def COLON(self):
            return self.getToken(CelestialParser.COLON, 0)

        def datatype(self):
            return self.getTypedRuleContext(CelestialParser.DatatypeContext,0)


        def iden(self):
            return self.getTypedRuleContext(CelestialParser.IdenContext,0)


        def getRuleIndex(self):
            return CelestialParser.RULE_idenType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdenType" ):
                listener.enterIdenType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdenType" ):
                listener.exitIdenType(self)




    def idenType(self):

        localctx = CelestialParser.IdenTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idenType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            localctx.name = self.iden()
            self.state = 129
            self.match(CelestialParser.COLON)
            self.state = 130
            self.datatype(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContractDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # IdenContext

        def CONTRACT(self):
            return self.getToken(CelestialParser.CONTRACT, 0)

        def contractBody(self):
            return self.getTypedRuleContext(CelestialParser.ContractBodyContext,0)


        def iden(self):
            return self.getTypedRuleContext(CelestialParser.IdenContext,0)


        def getRuleIndex(self):
            return CelestialParser.RULE_contractDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractDecl" ):
                listener.enterContractDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractDecl" ):
                listener.exitContractDecl(self)




    def contractDecl(self):

        localctx = CelestialParser.ContractDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_contractDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(CelestialParser.CONTRACT)
            self.state = 133
            localctx.name = self.iden()
            self.state = 134
            self.contractBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContractBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CelestialParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CelestialParser.RBRACE, 0)

        def contractContents(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CelestialParser.ContractContentsContext)
            else:
                return self.getTypedRuleContext(CelestialParser.ContractContentsContext,i)


        def getRuleIndex(self):
            return CelestialParser.RULE_contractBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractBody" ):
                listener.enterContractBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractBody" ):
                listener.exitContractBody(self)




    def contractBody(self):

        localctx = CelestialParser.ContractBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_contractBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(CelestialParser.LBRACE)
            self.state = 138 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 137
                self.contractContents()
                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
